--- a/module_4/notebooks/market_price.ipynb
+++ b/module_4/notebooks/market_price.ipynb
@@ -68,6 +68,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Методы merge() и join() нельзя назвать взаимозаменяемыми. Объединить датафреймы по столбцу с общим названием можно методом merge(), а join() для такой задачи не подойдёт. Методу join() понадобятся общие индексы, которых в датафрейме df1 и df2 нет. Важно не забыть правильный тип объединения — если в общем столбце не все данные совпадают, лучше использовать «внешний» тип слияния outer."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
