--- a/module_4/notebooks/market_price.ipynb
+++ b/module_4/notebooks/market_price.ipynb
@@ -77,6 +77,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Хорошие новости: вы снизили влияние подозрительных данных на итоговый результат. Так, коэффициент корреляции между аномально быстрыми заправками too_fast и медианной продолжительностью заправки good_time_spent составляет -0.32. Хотя в сырых данных, без фильтрации, коэффициент между аномально быстрыми заправками и средней продолжительностью заправки time_spent был -0.64. Ещё почти вдвое уменьшили корреляцию в области медленных заправок — от 0.8 между too_slowи time_spent до 0.45 в паре too_slow — good_time_spent.\n",
+    "\n",
+    "https://tocodata.com/marketing/korrelyaciya.html"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
