--- a/market_value_of_real_estate_research/notebooks/market_price.ipynb
+++ b/market_value_of_real_estate_research/notebooks/market_price.ipynb
@@ -2052,6 +2052,15 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Тут еще много что есть поиследовать конечно, но из-за нехватки времени и завала на основной работе этот проект сделал практически строго по предложенному плану отвечая на поставленные вопросы."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
