--- a/tariff_plans_analisys/notebooks/tariff_plans_analisys.ipynb
+++ b/tariff_plans_analisys/notebooks/tariff_plans_analisys.ipynb
@@ -28432,18 +28432,14 @@
     "## Шаг 5. Общие выводы.\n",
     "\n",
     "В данном исследовании мы рассмотрели данные 500 пользователей федерального оператора сотовой связи «Мегалайн» и можем сделать следующие выводы:\n",
-    "1. В выборке большинство пользователей из Москвы и Спб в возрасте от 18 до 75, средний возраст аудитории 46,5 лет\n",
-    "2. Каждый месяц выручка оператора связи по двум тарифам растет\n",
-    "3. Пользователи тарифа smart в среднем всегда переплачивают за пользование тарифом\n",
-    "5. Средняя выручка с пользователя тарифом ultra на 37% больше, чем пользователя тарифом smart\n",
-    "6. У нас есть как минимум 20% пользователей тарифа smart, которые не вписываются в его лимиты и переплачивают. Логично было бы предложить им перейти на тариф ultra.\n",
-    "7.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Вы аналитик компании «Мегалайн» — федерального оператора сотовой связи. Клиентам предлагают два тарифных плана: «Смарт» и «Ультра». Чтобы скорректировать рекламный бюджет, коммерческий департамент хочет понять, какой тариф приносит больше денег.\n",
-    "Вам предстоит сделать предварительный анализ тарифов на небольшой выборке клиентов. В вашем распоряжении данные 500 пользователей «Мегалайна»: кто они, откуда, каким тарифом пользуются, сколько звонков и сообщений каждый отправил за 2018 год. Нужно проанализировать поведение клиентов и сделать вывод — какой тариф лучше."
+    "1. В выборке пользователи из разных городов РФ, но большинство пользователей из Москвы и Спб, возраст всех пользователей от 18 до 75, средний возраст аудитории 46,5 лет.\n",
+    "2. Каждый месяц выручка оператора связи по двум тарифам растет.\n",
+    "3. Пользователи тарифа smart в среднем всегда переплачивают за пользование тарифом.\n",
+    "4. Средняя выручка с пользователя тарифом ultra на 37% больше, чем средняя выручка с пользователя тарифом smart.\n",
+    "5. У нас есть как минимум 20% пользователей тарифа smart, которые не вписываются в его лимиты и переплачивают. Логично было бы предложить им перейти на тариф ultra.\n",
+    "6. Тариф smart на момент конца 2018 года генерирует ~65% выручки и им пользуется ~72% пользователей, а ultra генерирует ~35% выручки и им пользуется ~28% пользователей.\n",
+    "7. Средняя выручка пользователей тарифов «Ультра» и «Смарт» различаются.\n",
+    "8. Средняя выручка пользователей из Москвы и других городов равны."
    ],
    "metadata": {
     "collapsed": false
