--- a/game_popularity_research_project/notebooks/game_popularity_research.ipynb
+++ b/game_popularity_research_project/notebooks/game_popularity_research.ipynb
@@ -39,14 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import plotly\n",
