--- a/game_popularity_research_project/notebooks/game_popularity_research.ipynb
+++ b/game_popularity_research_project/notebooks/game_popularity_research.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "      name platform  year_of_release genre  na_sales  eu_sales  jp_sales  \\\n659    NaN      GEN           1993.0   NaN      1.78      0.53      0.00   \n14244  NaN      GEN           1993.0   NaN      0.00      0.00      0.03   \n\n       other_sales  critic_score user_score rating  \n659           0.08           NaN        NaN    NaN  \n14244         0.00           NaN        NaN    NaN  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>platform</th>\n      <th>year_of_release</th>\n      <th>genre</th>\n      <th>na_sales</th>\n      <th>eu_sales</th>\n      <th>jp_sales</th>\n      <th>other_sales</th>\n      <th>critic_score</th>\n      <th>user_score</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>659</th>\n      <td>NaN</td>\n      <td>GEN</td>\n      <td>1993.0</td>\n      <td>NaN</td>\n      <td>1.78</td>\n      <td>0.53</td>\n      <td>0.00</td>\n      <td>0.08</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>14244</th>\n      <td>NaN</td>\n      <td>GEN</td>\n      <td>1993.0</td>\n      <td>NaN</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.03</td>\n      <td>0.00</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 200,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "Empty DataFrame\nColumns: [name, platform, year_of_release, genre, na_sales, eu_sales, jp_sales, other_sales, critic_score, user_score, rating]\nIndex: []",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>platform</th>\n      <th>year_of_release</th>\n      <th>genre</th>\n      <th>na_sales</th>\n      <th>eu_sales</th>\n      <th>jp_sales</th>\n      <th>other_sales</th>\n      <th>critic_score</th>\n      <th>user_score</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 201,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -404,62 +404,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 205,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                name platform  year_of_release       genre  \\\n0                         wii sports      wii             2006      sports   \n2                     mario kart wii      wii             2008      racing   \n3                  wii sports resort      wii             2009      sports   \n6              new super mario bros.       ds             2006    platform   \n7                           wii play      wii             2006        misc   \n...                              ...      ...              ...         ...   \n16697               bust-a-move 3000       gc             2003      puzzle   \n16698               mega brain boost       ds             2008      puzzle   \n16702        storm: frontline nation       pc             2011    strategy   \n16704                       plushees       ds             2008  simulation   \n16706  men in black ii: alien escape       gc             2003     shooter   \n\n        na_sales   eu_sales  jp_sales  other_sales  critic_score user_score  \\\n0      41.375000  28.953125  3.769531     8.453125          76.0          8   \n2      15.679688  12.757812  3.789062     3.289062          82.0        8.3   \n3      15.609375  10.929688  3.279297     2.949219          80.0          8   \n6      11.281250   9.140625  6.500000     2.880859          89.0        8.5   \n7      13.960938   9.179688  2.929688     2.839844          58.0        6.6   \n...          ...        ...       ...          ...           ...        ...   \n16697   0.010002   0.000000  0.000000     0.000000          53.0        tbd   \n16698   0.010002   0.000000  0.000000     0.000000          48.0        tbd   \n16702   0.000000   0.010002  0.000000     0.000000          60.0        7.2   \n16704   0.010002   0.000000  0.000000     0.000000           NaN        tbd   \n16706   0.010002   0.000000  0.000000     0.000000           NaN        tbd   \n\n      rating  \n0          e  \n2          e  \n3          e  \n6          e  \n7          e  \n...      ...  \n16697      e  \n16698      e  \n16702   e10+  \n16704      e  \n16706      t  \n\n[9949 rows x 11 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>platform</th>\n      <th>year_of_release</th>\n      <th>genre</th>\n      <th>na_sales</th>\n      <th>eu_sales</th>\n      <th>jp_sales</th>\n      <th>other_sales</th>\n      <th>critic_score</th>\n      <th>user_score</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>wii sports</td>\n      <td>wii</td>\n      <td>2006</td>\n      <td>sports</td>\n      <td>41.375000</td>\n      <td>28.953125</td>\n      <td>3.769531</td>\n      <td>8.453125</td>\n      <td>76.0</td>\n      <td>8</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>mario kart wii</td>\n      <td>wii</td>\n      <td>2008</td>\n      <td>racing</td>\n      <td>15.679688</td>\n      <td>12.757812</td>\n      <td>3.789062</td>\n      <td>3.289062</td>\n      <td>82.0</td>\n      <td>8.3</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>wii sports resort</td>\n      <td>wii</td>\n      <td>2009</td>\n      <td>sports</td>\n      <td>15.609375</td>\n      <td>10.929688</td>\n      <td>3.279297</td>\n      <td>2.949219</td>\n      <td>80.0</td>\n      <td>8</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>new super mario bros.</td>\n      <td>ds</td>\n      <td>2006</td>\n      <td>platform</td>\n      <td>11.281250</td>\n      <td>9.140625</td>\n      <td>6.500000</td>\n      <td>2.880859</td>\n      <td>89.0</td>\n      <td>8.5</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>wii play</td>\n      <td>wii</td>\n      <td>2006</td>\n      <td>misc</td>\n      <td>13.960938</td>\n      <td>9.179688</td>\n      <td>2.929688</td>\n      <td>2.839844</td>\n      <td>58.0</td>\n      <td>6.6</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>16697</th>\n      <td>bust-a-move 3000</td>\n      <td>gc</td>\n      <td>2003</td>\n      <td>puzzle</td>\n      <td>0.010002</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>53.0</td>\n      <td>tbd</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>16698</th>\n      <td>mega brain boost</td>\n      <td>ds</td>\n      <td>2008</td>\n      <td>puzzle</td>\n      <td>0.010002</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>48.0</td>\n      <td>tbd</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>16702</th>\n      <td>storm: frontline nation</td>\n      <td>pc</td>\n      <td>2011</td>\n      <td>strategy</td>\n      <td>0.000000</td>\n      <td>0.010002</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>60.0</td>\n      <td>7.2</td>\n      <td>e10+</td>\n    </tr>\n    <tr>\n      <th>16704</th>\n      <td>plushees</td>\n      <td>ds</td>\n      <td>2008</td>\n      <td>simulation</td>\n      <td>0.010002</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>NaN</td>\n      <td>tbd</td>\n      <td>e</td>\n    </tr>\n    <tr>\n      <th>16706</th>\n      <td>men in black ii: alien escape</td>\n      <td>gc</td>\n      <td>2003</td>\n      <td>shooter</td>\n      <td>0.010002</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>NaN</td>\n      <td>tbd</td>\n      <td>t</td>\n    </tr>\n  </tbody>\n</table>\n<p>9949 rows × 11 columns</p>\n</div>"
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[~data['rating'].isna()]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "k-a = E  - с 1998 года, так что переименовываем k-a в E"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "e       3990\nt       2961\nm       1563\ne10+    1420\nec         8\nk-a        3\nrp         3\nao         1\nName: rating, dtype: int64"
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['rating'].value_counts()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "Год релиза это точно целое число, так что преобразуем данную колонку из float16 в int16"
@@ -470,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -520,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -692,6 +636,56 @@
     "    display(f'Сжато: {((memory_usage_before_change_dtypes - memory_usage_after_change_dtypes) / bytes_in_mb):.2f} мб.')\n",
     "\n",
     "auto_change_dtypes(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "k-a = E  - с 1998 года, так что переименовываем k-a в E"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Индексы 475, 488, 594 - повторы"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                       0\n206                                 (warzone 2100, 1999)\n238                              (madden nfl 2005, 2004)\n250    (winning eleven: pro evolution soccer 2007, 2006)\n283                              (madden nfl 2003, 2002)\n333    (mario & sonic at the london 2012 olympic game...\n...                                                  ...\n16528                  (pro evolution soccer 2010, 2009)\n16551  (winning eleven: pro evolution soccer 2007, 2006)\n16585              (farming 2017 - the simulation, 2016)\n16709  (score international baja 1000: the official g...\n16711                           (lma manager 2007, 2006)\n\n[514 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>206</th>\n      <td>(warzone 2100, 1999)</td>\n    </tr>\n    <tr>\n      <th>238</th>\n      <td>(madden nfl 2005, 2004)</td>\n    </tr>\n    <tr>\n      <th>250</th>\n      <td>(winning eleven: pro evolution soccer 2007, 2006)</td>\n    </tr>\n    <tr>\n      <th>283</th>\n      <td>(madden nfl 2003, 2002)</td>\n    </tr>\n    <tr>\n      <th>333</th>\n      <td>(mario &amp; sonic at the london 2012 olympic game...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>16528</th>\n      <td>(pro evolution soccer 2010, 2009)</td>\n    </tr>\n    <tr>\n      <th>16551</th>\n      <td>(winning eleven: pro evolution soccer 2007, 2006)</td>\n    </tr>\n    <tr>\n      <th>16585</th>\n      <td>(farming 2017 - the simulation, 2016)</td>\n    </tr>\n    <tr>\n      <th>16709</th>\n      <td>(score international baja 1000: the official g...</td>\n    </tr>\n    <tr>\n      <th>16711</th>\n      <td>(lma manager 2007, 2006)</td>\n    </tr>\n  </tbody>\n</table>\n<p>514 rows × 1 columns</p>\n</div>"
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data[['name', 'year_of_release']].apply(lambda x, y: re.search('[1-2][0-9][0-9][0-9]', x['name']).group(), y['year_of_release'] if re.search('[1-2][0-9][0-9][0-9]', x['name']) else 0, axis=1)\n",
+    "\n",
+    "def t(row):\n",
+    "    if re.search('[1-2][0-9][0-9][0-9]', row['name']):\n",
+    "        match = int(re.search('[1-2][0-9][0-9][0-9]', row['name']).group())\n",
+    "        if match != int(row['year_of_release']):\n",
+    "            return row['name'], row['year_of_release']\n",
+    "\n",
+    "data[['name', 'year_of_release']].apply(t, axis=1).dropna().T\n"
    ],
    "metadata": {
     "collapsed": false,
