--- a/game_popularity_research_project/notebooks/game_popularity_research.ipynb
+++ b/game_popularity_research_project/notebooks/game_popularity_research.ipynb
@@ -38304,7 +38304,9 @@
     "\n",
     "Из данного предположения формируем 2 гипотезы:\n",
     "h0 - средние пользовательские рейтинги платформ Xbox One и PC одинаковые\n",
-    "h1 - средние пользовательские рейтинги платформ Xbox One и PC различаются"
+    "h1 - средние пользовательские рейтинги платформ Xbox One и PC различаются\n",
+    "\n",
+    "Т.к. перед нами стоит задача проверки двусторонней гипотезы о средних двух генеральных совокупностей - применим метод ttest."
    ],
    "metadata": {
     "collapsed": false
@@ -38312,7 +38314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 150,
    "outputs": [
     {
      "name": "stdout",
@@ -38349,7 +38351,9 @@
     "\n",
     "Из данного предположения формируем 2 гипотезы:\n",
     "h0 - средние пользовательские рейтинги жанров Action и Sports одинаковые\n",
-    "h1 - средние пользовательские рейтинги жанров Action и Sports различаются"
+    "h1 - средние пользовательские рейтинги жанров Action и Sports различаются\n",
+    "\n",
+    "Т.к. перед нами стоит задача проверки двусторонней гипотезы о средних двух генеральных совокупностей - применим метод ttest."
    ],
    "metadata": {
     "collapsed": false
