--- a/classifikaciya_tarifof_project/notebooks/tariffs_classifyer.ipynb
+++ b/classifikaciya_tarifof_project/notebooks/tariffs_classifyer.ipynb
@@ -77,7 +77,7 @@
     "predictions_valid = model.predict(features_valid) # получите предсказания модели на валидационной выборке\n",
     "\n",
     "result = mean_squared_error(target_valid, predictions_valid) ** 0.5 # посчитайте значение метрики RMSE на валидационной выборке\n",
-    "print(\"RMSE наилучшей модели на валидационной выборке:\", result)"
+    "print(\"RMSE наилучшей модели на валидационной выборке:\", result)\n"
    ],
    "metadata": {
     "collapsed": false,
