--- a/classifikaciya_tarifof/notebooks/tariffs_classifyer.ipynb
+++ b/classifikaciya_tarifof/notebooks/tariffs_classifyer.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -68,13 +68,16 @@
     "import plotly.express as px\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error as mse\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "\n",
+    "# n_jobs в моем случае 4 т.к. у меня 4 физических процессора, функцию определения количества ядер\n",
+    "# для тренажера писать не буду, т.к. потом могут быть ошибки при выполнении\n",
+    "# поправив данное значение количество процессов будет изменено во всех вызовах функций\n",
+    "N_JOBS = 4"
    ]
   },
   {
@@ -1183,7 +1186,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Выборка пользователей тарифа Смарт более чем в 2 раза больше, чем Ультра. Скорее всего готовая модель будет лучше классифицировать пользователей тарифа Смарт."
+    "Выборка пользователей тарифа Смарт более чем в 2 раза больше, чем Ультра. Скорее всего готовая модель будет лучше классифицировать пользователей тарифа Смарт.\n",
+    "Также на вменяемость будем проверять по самой частотной категории smart, т.е. is_ultra = 0."
    ],
    "metadata": {
     "collapsed": false
@@ -1234,6 +1238,8 @@
    "source": [
     "## Шаг 3. Обучение и оценка моделей\n",
     "\n",
+    "Т.к. перед нами стоит задача бинарной классификации пользователей по тарифам, будем использовать модели классификации.\n",
+    "\n",
     "### 3.1 Обучим и проведем оценку модели DecisionTreeClassifier"
    ],
    "metadata": {
@@ -1242,14 +1248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_depth': 7, 'min_samples_leaf': 7, 'min_samples_split': 2}\n",
-      "0.7955824285499726\n"
+      "Параметры наилучшей модели: {'max_depth': 7, 'min_samples_leaf': 7, 'min_samples_split': 7}\n",
+      "Accuracy: 0.7970954356846474\n"
      ]
     }
    ],
@@ -1262,9 +1268,7 @@
     "}\n",
     "\n",
     "# воспользуемся GridSearchCV для поиска наилучших гиперпараметров\n",
-    "# n_jobs в моем случае 4 т.к. у меня 4 физических процессора, функцию определения количества ядер\n",
-    "# для тренажера писать не буду, т.к. потом могут быть ошибки при выполнении\n",
-    "descision_tree_model = GridSearchCV(DecisionTreeClassifier(), params, cv=5, n_jobs=4)\n",
+    "descision_tree_model = GridSearchCV(DecisionTreeClassifier(random_state=10), params, cv=5, n_jobs=N_JOBS)\n",
     "descision_tree_model.fit(features_train, target_train)\n",
     "print(f'Параметры наилучшей модели: {descision_tree_model.best_params_}')\n",
     "print(f'Accuracy: {descision_tree_model.best_score_}')"
@@ -1278,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 104,
    "outputs": [
     {
      "name": "stdout",
@@ -1286,19 +1290,21 @@
      "text": [
       "Accuracy на валидационной выборке: 0.78\n",
       "Precision на валидационной выборке: 0.73\n",
-      "Recall на валидационной выборке: 0.40\n"
+      "Recall на валидационной выборке: 0.40\n",
+      "MSE на валидационной выборке: 0.22\n"
      ]
     }
    ],
    "source": [
     "# создадим модель с оптимальными параметрами\n",
-    "best_tree = DecisionTreeClassifier(**descision_tree_model.best_params_)\n",
+    "best_tree = DecisionTreeClassifier(random_state=10, **descision_tree_model.best_params_)\n",
     "# обучим\n",
     "best_tree.fit(features_train, target_train)\n",
     "# оценим\n",
     "print(f'Accuracy на валидационной выборке: {accuracy_score(target_valid, best_tree.predict(features_valid)):.2f}')\n",
     "print(f'Precision на валидационной выборке: {precision_score(target_valid, best_tree.predict(features_valid)):.2f}')\n",
-    "print(f'Recall на валидационной выборке: {recall_score(target_valid, best_tree.predict(features_valid)):.2f}')"
+    "print(f'Recall на валидационной выборке: {recall_score(target_valid, best_tree.predict(features_valid)):.2f}')\n",
+    "print(f'MSE на валидационной выборке: {mse(target_valid, best_tree.predict(features_valid)):.2f}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1310,7 +1316,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Вот тут попрошу разъяснения. Помогите понять, как правильно интерпретировать Accuracy, Precision и Recall человеческим языком))"
+    "Вот тут попрошу разъяснения. Помогите понять, как правильно интерпретировать Accuracy, Precision, Recall и MSE человеческим языком и какой параметр в какую сторону (больше/меньше) лучше)"
    ],
    "metadata": {
     "collapsed": false
@@ -1347,7 +1353,7 @@
     "}\n",
     "\n",
     "# воспользуемся GridSearchCV для поиска наилучших гиперпараметров\n",
-    "random_forest_model = GridSearchCV(RandomForestClassifier(), params, cv=5, n_jobs=4)\n",
+    "random_forest_model = GridSearchCV(RandomForestClassifier(random_state=10), params, cv=5, n_jobs=N_JOBS)\n",
     "random_forest_model.fit(features_train, target_train)\n",
     "print(f'Параметры наилучшей модели: {random_forest_model.best_params_}')\n",
     "print(f'Accuracy: {random_forest_model.best_score_}')"
@@ -1375,13 +1381,14 @@
    ],
    "source": [
     "# создадим модель с оптимальными параметрами\n",
-    "best_random_forest_model = RandomForestClassifier(**random_forest_model.best_params_)\n",
+    "best_random_forest_model = RandomForestClassifier(random_state=10, **random_forest_model.best_params_)\n",
     "# обучим\n",
     "best_random_forest_model.fit(features_train, target_train)\n",
     "# оценим\n",
     "print(f'Accuracy на валидационной выборке: {accuracy_score(target_valid, best_random_forest_model.predict(features_valid)):.2f}')\n",
     "print(f'Precision на валидационной выборке: {precision_score(target_valid, best_random_forest_model.predict(features_valid)):.2f}')\n",
-    "print(f'Recall на валидационной выборке: {recall_score(target_valid, best_random_forest_model.predict(features_valid)):.2f}')"
+    "print(f'Recall на валидационной выборке: {recall_score(target_valid, best_random_forest_model.predict(features_valid)):.2f}')\n",
+    "print(f'MSE на валидационной выборке: {mse(target_valid, best_random_forest_model.predict(features_valid)):.2f}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1401,32 +1408,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# объявим словарь с параметрами\n",
+    "params = {\n",
+    "    'kernel': ['poly', 'rbf', 'sigmoid'],\n",
+    "    'degree': list(range(1, 40))\n",
+    "}\n",
+    "\n",
+    "# воспользуемся GridSearchCV для поиска наилучших гиперпараметров\n",
+    "SVC_model = GridSearchCV(SVC(random_state=10), params, cv=5, n_jobs=N_JOBS)\n",
+    "SVC_model.fit(features_train, target_train)\n",
+    "print(f'Параметры наилучшей модели: {SVC_model.best_params_}')\n",
+    "print(f'Accuracy: {SVC_model.best_score_}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Classification metrics can't handle a mix of binary and continuous targets",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32mC:\\Users\\A4F7~1\\AppData\\Local\\Temp/ipykernel_8712/1524739575.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[0mresult\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmse\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtarget_valid\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpredictions_valid\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m**\u001B[0m \u001B[1;36m0.5\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0maccuracy_score\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtarget_valid\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpredictions_valid\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py\u001B[0m in \u001B[0;36maccuracy_score\u001B[1;34m(y_true, y_pred, normalize, sample_weight)\u001B[0m\n\u001B[0;32m    203\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    204\u001B[0m     \u001B[1;31m# Compute accuracy for each possible representation\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 205\u001B[1;33m     \u001B[0my_type\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_true\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_pred\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0m_check_targets\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0my_true\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_pred\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    206\u001B[0m     \u001B[0mcheck_consistent_length\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0my_true\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_pred\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msample_weight\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    207\u001B[0m     \u001B[1;32mif\u001B[0m \u001B[0my_type\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstartswith\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"multilabel\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py\u001B[0m in \u001B[0;36m_check_targets\u001B[1;34m(y_true, y_pred)\u001B[0m\n\u001B[0;32m     91\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     92\u001B[0m     \u001B[1;32mif\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0my_type\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m>\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 93\u001B[1;33m         raise ValueError(\n\u001B[0m\u001B[0;32m     94\u001B[0m             \"Classification metrics can't handle a mix of {0} and {1} targets\".format(\n\u001B[0;32m     95\u001B[0m                 \u001B[0mtype_true\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtype_pred\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mValueError\u001B[0m: Classification metrics can't handle a mix of binary and continuous targets"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy на валидационной выборке: 0.78\n",
+      "Precision на валидационной выборке: 0.68\n",
+      "Recall на валидационной выборке: 0.54\n",
+      "MSE на валидационной выборке: 0.22\n"
      ]
     }
    ],
    "source": [
-    "linear_regression_model = LinearRegression()\n",
-    "# обучим модель на тренировочной выборке\n",
-    "linear_regression_model.fit(features_train, target_train)\n",
-    "# получим предсказания модели на валидационной выборке\n",
-    "predictions_valid = linear_regression_model.predict(features_valid)\n",
-    "# посчитаем значение метрики RMSE на валидационной выборке\n",
-    "result = mse(target_valid, predictions_valid) ** 0.5\n",
-    "\n",
-    "print(accuracy_score(target_valid, predictions_valid))"
+    "# создадим модель с оптимальными параметрами\n",
+    "best_SVC_model = RandomForestClassifier(random_state=10, **SVC_model.best_params_)\n",
+    "# обучим\n",
+    "best_SVC_model.fit(features_train, target_train)\n",
+    "# оценим\n",
+    "print(f'Accuracy на валидационной выборке: {accuracy_score(target_valid, best_SVC_model.predict(features_valid)):.2f}')\n",
+    "print(f'Precision на валидационной выборке: {precision_score(target_valid, best_SVC_model.predict(features_valid)):.2f}')\n",
+    "print(f'Recall на валидационной выборке: {recall_score(target_valid, best_SVC_model.predict(features_valid)):.2f}')\n",
+    "print(f'MSE на валидационной выборке: {mse(target_valid, best_SVC_model.predict(features_valid)):.2f}')"
    ],
    "metadata": {
     "collapsed": false,
