--- a/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
+++ b/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.utils import shuffle"
    ]
   },
   {
@@ -28,6 +29,32 @@
    "source": [
     "data = pd.read_csv('https://code.s3.yandex.net/datasets/Churn.csv')\n",
     "data.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def upsample(features, target, repeat):\n",
+    "    features_zeros = features[target == 0]\n",
+    "    features_ones = features[target == 1]\n",
+    "    target_zeros = target[target == 0]\n",
+    "    target_ones = target[target == 1]\n",
+    "\n",
+    "    features_upsampled = pd.concat([features_zeros] + [features_ones] * repeat)\n",
+    "    target_upsampled = pd.concat([target_zeros] + [target_ones] * repeat)\n",
+    "\n",
+    "    features_upsampled, target_upsampled = shuffle(\n",
+    "        features_upsampled, target_upsampled, random_state=12345)\n",
+    "\n",
+    "    return features_upsampled, target_upsampled"
    ],
    "metadata": {
     "collapsed": false,
