--- a/tariff_plans_analisys/notebooks/tariff_plans_analisys.ipynb
+++ b/tariff_plans_analisys/notebooks/tariff_plans_analisys.ipynb
@@ -109,11 +109,7 @@
     "# импортнем наши любимые библиотеки\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly\n",
-    "import plotly.graph_objs as go\n",
     "import plotly.express as px\n",
-    "from plotly.subplots import make_subplots\n",
     "from math import ceil\n",
     "from scipy import stats as st\n",
     "\n",
@@ -786,7 +782,7 @@
     }
    ],
    "source": [
-    "calls['rounded_duration'] = calls['duration'].apply(lambda x: ceil(x))\n",
+    "calls['rounded_duration'] = np.ceil(calls['duration']).astype(int)\n",
     "# проверим, что код отработал верно\n",
     "calls.head()"
    ],
@@ -947,7 +943,7 @@
     "# т.к. для веб-трафика отдельные сессии не считаются,\n",
     "# а вместо этого оператором общая сумма за месяц округляется в бо́льшую сторону,\n",
     "# то посчитаем количество ГБ, используемых пользователем и округлим полученное значение соответствующим образом\n",
-    "internet_traff_data['rounded_gb_used'] = (internet_traff_data['mb_used'] / 1024).apply(lambda x: ceil(x))\n",
+    "internet_traff_data['rounded_gb_used'] = np.ceil(internet_traff_data['mb_used'] / 1024).astype(int)\n",
     "\n",
     "# проверим, что код отработал верно\n",
     "internet_traff_data.head()"
@@ -983,11 +979,11 @@
     }
    ],
    "source": [
-    "merged_data = pd.merge(duration_data.rename({'call_date': 'date'}, axis=1), messages_data.rename({'message_date': 'date'}, axis=1), on=['user_id', 'date', 'month'])\n",
+    "merged_data = pd.merge(duration_data.rename({'call_date': 'date'}, axis=1), messages_data.rename({'message_date': 'date'}, axis=1), on=['user_id', 'date', 'month'], how='outer')\n",
     "\n",
-    "merged_data = pd.merge(merged_data, internet_traff_data.rename({'session_date': 'date'}, axis=1), on=['user_id', 'date', 'month'])\n",
+    "merged_data = pd.merge(merged_data, internet_traff_data.rename({'session_date': 'date'}, axis=1), on=['user_id', 'date', 'month'], how='outer')\n",
     "\n",
-    "merged_data = pd.merge(merged_data, users[['user_id', 'tariff']], on='user_id').rename(columns={'date': 'month_number'})\n",
+    "merged_data = pd.merge(merged_data, users[['user_id', 'tariff']], on='user_id', how='left').rename(columns={'date': 'month_number'})\n",
     "\n",
     "merged_data.head()"
    ],
