--- a/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
+++ b/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
@@ -29401,26 +29401,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1: 0.5558375634517767\n"
+      "Fitting 5 folds for each of 2730 candidates, totalling 13650 fits\n"
      ]
     }
    ],
    "source": [
-    "model = RandomForestClassifier(random_state=12345, n_estimators=10)\n",
-    "model.fit(features_train, target_train)\n",
-    "predicted_valid = model.predict(features_test)\n",
-    "print(\"F1:\", f1_score(target_test, predicted_valid))"
+    "params = {\n",
+    "    'max_depth': list(range(5, 40)),\n",
+    "    'n_estimators': list(range(1, 40)),\n",
+    "    'bootstrap': [True, False]\n",
+    "}\n",
+    "\n",
+    "# воспользуемся GridSearchCV для поиска наилучших гиперпараметров\n",
+    "random_forest_model = GridSearchCV(RandomForestClassifier(random_state=10), params, cv=5, n_jobs=4, verbose=10)\n",
+    "random_forest_model.fit(features_train, target_train)\n",
+    "print(f'Параметры наилучшей модели: {random_forest_model.best_params_}')\n",
+    "print(f'Accuracy: {random_forest_model.best_score_}')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
