--- a/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
+++ b/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
@@ -29401,13 +29401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 2730 candidates, totalling 13650 fits\n"
+      "Fitting 5 folds for each of 2730 candidates, totalling 13650 fits\n",
+      "Параметры наилучшей модели: {'bootstrap': True, 'max_depth': 11, 'n_estimators': 36}\n",
+      "Accuracy: 0.8609333333333333\n"
      ]
     }
    ],
@@ -29422,13 +29424,15 @@
     "random_forest_model = GridSearchCV(RandomForestClassifier(random_state=10), params, cv=5, n_jobs=4, verbose=10)\n",
     "random_forest_model.fit(features_train, target_train)\n",
     "print(f'Параметры наилучшей модели: {random_forest_model.best_params_}')\n",
-    "print(f'Accuracy: {random_forest_model.best_score_}')"
+    "print(f'Accuracy: {random_forest_model.best_score_}')\n",
+    "\n",
+    "# Параметры наилучшей модели: {'bootstrap': True, 'max_depth': 11, 'n_estimators': 36}\n",
+    "# Accuracy: 0.8609333333333333"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
